--- a/index.html
+++ b/index.html
@@ -36,65 +36,69 @@
         {
             width: 40px !important;
         }  
-		.new-radio.checked
-		{
-			background:rgba(0,0,0,0.5) !important;
-		}
-        .input-group-addon
+        .new-radio.checked
         {
-            background: rgba(0, 0, 0, 0.2);
-        }
-        .reicon
-        {
-			color:#fff;
-        }	
-        p {
-            padding: 0.1em;
-            font-size:16px;
-            overflow-y:auto;
-            max-height:320px;
-            font-family: 'Raleway', Arial, sans-serif;
+         background:rgba(0,0,0,0.5) !important;
+     }
+     .new-radio
+     {
+        background: rgba(0,0,0,0) !important;
+    }
+    .input-group-addon
+    {
+        background: rgba(0, 0, 0, 0.2);
+    }
+    .reicon
+    {
+     color:#fff;
+ }	
+ p {
+    padding: 0.1em;
+    font-size:16px;
+    overflow-y:auto;
+    max-height:320px;
+    font-family: 'Raleway', Arial, sans-serif;
 
-        }
-        body.modal-open {
-            overflow: hidden !important;
-            position:fixed !important;
-            width: 100%;
-        }
-        @media screen and (max-width: 800px) {
-            .unescodiv {
-                display:none;
-            }
-			.update{
-				font-size:5vw !important;
-			}
-        }
-		@media screen and (min-width:799px){
-			.update{
-				font-size:3vw !important;
-			}
-		}
-		
-    </style>
-    <style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style>
-    <style>
-        .img-with-text {
-            text-align: justify;
-            width: [width of img];
-        }
-        .img-with-text img {
-            display: block;
-            margin: 0 auto;
-        }
-        .errspan {
-            float: right;
-            margin-left: 6px;
-            margin-top: -10px;
-            position: relative;
-            z-index: 2;
-            color: blue;
-        }
-    </style>
+}
+body.modal-open {
+    overflow: hidden !important;
+    position:fixed !important;
+    width: 100%;
+}
+@media screen and (max-width: 800px) {
+    .unescodiv {
+        display:none;
+    }
+    .update{
+        font-size:5vw !important;
+    }
+}
+@media screen and (min-width:799px){
+ .update{
+    font-size:3vw !important;
+}
+}
+
+</style>
+<style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style>
+<style>
+    .img-with-text {
+        text-align: justify;
+        width: [width of img];
+    }
+    .img-with-text img {
+        display: block;
+        margin: 0 auto;
+    }
+    .errspan {
+        float: right;
+        margin-left: 6px;
+        margin-top: -10px;
+        position: relative;
+        z-index: 2;
+        color: blue;
+    }
+</style>
 
 </head>
 <body class="home page page-id-4 page-template page-template-template-homepage page-template-template-homepage-php  one-page">
@@ -219,71 +223,71 @@ data-anchor="aboutsa">
     <div class="container section-wrap"
     style="">
     <div>
-       <ul class="nav nav-tabs nav-justified" style="background-color:transparent;">
-          <li class="active" data-toggle="tab">
-             <a href="#tab0">
-                 <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Why Student Ambassdor
-                 </h6></a>
-             </li>
-             <li data-toggle="tab">
-                 <a href="#tab1">
-                     <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Role of Student Ambassdor</h6></a>
-                 </li>
-                 <li data-toggle="tab">
-                     <a href="#tab2" >
-                         <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Benefits</h6></a>
-                     </li data-toggle="tab">
-                     <li>
-                         <a href="#tab3">
-                             <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Requirements</h6></a>
-                         </li>
+     <ul class="nav nav-tabs nav-justified" style="background-color:transparent;">
+      <li class="active" data-toggle="tab">
+       <a href="#tab0">
+           <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Why Student Ambassdor
+           </h6></a>
+       </li>
+       <li data-toggle="tab">
+           <a href="#tab1">
+               <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Role of Student Ambassdor</h6></a>
+           </li>
+           <li data-toggle="tab">
+               <a href="#tab2" >
+                   <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Benefits</h6></a>
+               </li data-toggle="tab">
+               <li>
+                   <a href="#tab3">
+                       <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Requirements</h6></a>
+                   </li>
 
-                     </ul>
-                 </div>
-                 <div style="background:transparent; border:transparent; color:#fff;"class="tab-content">
-                  <div class="tab-pane fade in active" id="tab0">
-                     <ul style="color:#fff;font-style:normal;font-size:20px;">
-                         <li>Enhance your professional development</li>
-                         <li>Get to work with the elite Ambassadors from top notch colleges</li>
-                         <li>Improve your leadership, marketing & communication skills</li>
-                         <li>See your creativity, innovation & ideas come to fruition</li>
-                     </ul>
-                 </div>
-                 <div class="tab-pane fade" id='tab1'>
-                     <ul style="color:#fff;font-style:normal;font-size:20px;">
-                         <li>Serve as a bridge between K! & your college</li>
-                         <li>Spread the K! word to the students & faculties in your campus</li>
-                         <li>Make your college students participate in the the events & workshops of K!</li>
-                         <li>Display the marketing materials given by the K! team in your college</li>
-                     </ul>
-                 </div>
-                 <div class="tab-pane fade" id='tab2'>
-                     <ul style="color:#fff;font-style:normal;font-size:20px;">
-                         <li>Delegate kits, T-shirts, Bags</li>
-                         <li>Free onsite registration</li>
-                         <li>One way travel allowance</li>
-                         <li>Free passes to attend Guest Lectures</li>
-                         <li>Cash prizes, free accomodation& workshop to best Ambassadors</li>
-                     </ul>				
-                 </div>
-                 <div class="tab-pane fade" id='tab3'>
-                     <ul style="color:#fff;font-style:normal;font-size:20px;">
-                         <li>College student - any degree & any year</li>
-                         <li>Good interpersonal skills</li>
-                         <li>General marketing skills</li>
-                         <li>Involvement in extra curricular activities</li>
-                         <li>Passion for learning, creativity, innovation & information sharing</li>
-                     </ul>
-                 </div>
-             </div>
-         </div>
-     </div>
-     <!-- .section-content -->
-     <div class="animation text-center"
-     data-appear-animation="bounceInUp"
-     data-appear-animation-delay="100">
-     <a href="#form"><i class="fa fa-angle-double-down" style="font-size:48px;"></i></a>
- </div>
+               </ul>
+           </div>
+           <div style="background:transparent; border:transparent; color:#fff;"class="tab-content">
+              <div class="tab-pane fade in active" id="tab0">
+               <ul style="color:#fff;font-style:normal;font-size:20px;">
+                   <li>Enhance your professional development</li>
+                   <li>Get to work with the elite Ambassadors from top notch colleges</li>
+                   <li>Improve your leadership, marketing & communication skills</li>
+                   <li>See your creativity, innovation & ideas come to fruition</li>
+               </ul>
+           </div>
+           <div class="tab-pane fade" id='tab1'>
+               <ul style="color:#fff;font-style:normal;font-size:20px;">
+                   <li>Serve as a bridge between K! & your college</li>
+                   <li>Spread the K! word to the students & faculties in your campus</li>
+                   <li>Make your college students participate in the the events & workshops of K!</li>
+                   <li>Display the marketing materials given by the K! team in your college</li>
+               </ul>
+           </div>
+           <div class="tab-pane fade" id='tab2'>
+               <ul style="color:#fff;font-style:normal;font-size:20px;">
+                   <li>Delegate kits, T-shirts, Bags</li>
+                   <li>Free onsite registration</li>
+                   <li>One way travel allowance</li>
+                   <li>Free passes to attend Guest Lectures</li>
+                   <li>Cash prizes, free accomodation& workshop to best Ambassadors</li>
+               </ul>				
+           </div>
+           <div class="tab-pane fade" id='tab3'>
+               <ul style="color:#fff;font-style:normal;font-size:20px;">
+                   <li>College student - any degree & any year</li>
+                   <li>Good interpersonal skills</li>
+                   <li>General marketing skills</li>
+                   <li>Involvement in extra curricular activities</li>
+                   <li>Passion for learning, creativity, innovation & information sharing</li>
+               </ul>
+           </div>
+       </div>
+   </div>
+</div>
+<!-- .section-content -->
+<div class="animation text-center"
+data-appear-animation="bounceInUp"
+data-appear-animation-delay="100">
+<a href="#form"><i class="fa fa-angle-double-down" style="font-size:48px;"></i></a>
+</div>
 </section>
 <!-- .section -->
 
@@ -303,32 +307,32 @@ data-anchor="form">
     <div class="particle" style="width: 100%;height: 100%;position: absolute;"></div>
     <div class="container section-wrap">
         <div>
-           <div>
-               <h1 style="color: rgb(255, 247, 204);" class="section-title text-center" data-appear-animation="fadeInDown" data-appear-animation-delay="100">STUDENT AMBASSDOR REGISTRATION</h1>						
-               <div align="center" style="max-height:800px;">
-                 <form id="sa_registration_form" style="position: relative; width:50%;min-width: 300px; background: rgba(0, 0, 0, 0.2); padding-bottom:10px; padding-left:20px; padding-right:20px; padding-top:10px;" method="post">
-                    <div class="input-group" style="padding-bottom:13px;">
-                       <span class="input-group-addon"><i class="reicon glyphicon glyphicon-user"></i></span>
-                       <input id="name" type="text" class="form-control" name="name" placeholder="Your name" onblur="validatename(this)">
-                   </div>
-                   <div class="input-group" style="padding-bottom:13px;">
-                       <span class="input-group-addon"><i class="reicon fa fa-phone" style="width:16px;"></i></span>
-                       <input id="phone" type="text" class="form-control" name="contactNumber" placeholder="Your mobile number" onblur="validatephone(this)">
-                   </div>
+         <div>
+             <h1 style="color: rgb(255, 247, 204);" class="section-title text-center" data-appear-animation="fadeInDown" data-appear-animation-delay="100">STUDENT AMBASSDOR REGISTRATION</h1>						
+             <div align="center" style="max-height:800px;">
+               <form id="sa_registration_form" style="position: relative; width:50%;min-width: 300px; background: rgba(0, 0, 0, 0.2); padding-bottom:10px; padding-left:20px; padding-right:20px; padding-top:10px;" method="post">
+                <div class="input-group" style="padding-bottom:13px;">
+                 <span class="input-group-addon"><i class="reicon glyphicon glyphicon-user"></i></span>
+                 <input id="name" type="text" class="form-control" name="name" placeholder="Your name" onblur="validatename(this)">
+             </div>
+             <div class="input-group" style="padding-bottom:13px;">
+                 <span class="input-group-addon"><i class="reicon fa fa-phone" style="width:16px;"></i></span>
+                 <input id="phone" type="text" class="form-control" name="contactNumber" placeholder="Your mobile number" onblur="validatephone(this)">
+             </div>
 
-                   <div class="input-group" style="padding-bottom:13px;">
-                       <span class="input-group-addon"><i class="reicon fa fa-envelope"></i></span>
-                       <input id="email" type="text" class="form-control" name="emailId" placeholder="Your email-id" onblur="validatemail(this)">
-                   </div>
+             <div class="input-group" style="padding-bottom:13px;">
+                 <span class="input-group-addon"><i class="reicon fa fa-envelope"></i></span>
+                 <input id="email" type="text" class="form-control" name="emailId" placeholder="Your email-id" onblur="validatemail(this)">
+             </div>
 
-                   <div class="input-group" style="padding-bottom:13px;">
-                       <span class="input-group-addon"><i class="reicon glyphicon glyphicon-lock"></i></span>
-                       <input id="pass" type="password" class="form-control" name="password" placeholder="Password (min 8 characters)" onblur="validatepass(this)">
-                   </div>
-                   <div class="input-group">
-                       <span class="input-group-addon"><i class="reicon fa fa-calendar"></i></span>
-                       <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="text"/>
-                   </div>
+             <div class="input-group" style="padding-bottom:13px;">
+                 <span class="input-group-addon"><i class="reicon glyphicon glyphicon-lock"></i></span>
+                 <input id="pass" type="password" class="form-control" name="password" placeholder="Password (min 8 characters)" onblur="validatepass(this)">
+             </div>
+             <div class="input-group">
+                 <span class="input-group-addon"><i class="reicon fa fa-calendar"></i></span>
+                 <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="text"/>
+             </div>
 				   <!--div class="input-group date" data-provide="datepicker">
 						<span class="input-group-addon"><i class="reicon fa fa-calendar"></i></span>
 						<input type="text" placeholder="MM/DD/YYY" class="form-control" data-provide="datepicker" data-date-end-date="0d">
@@ -336,36 +340,36 @@ data-anchor="form">
 							<span class="glyphicon glyphicon-th"></span>
 						</div>
 					</div-->
-                   <div style="color:#fff;" class="input-group pull-left">
-					Gender:
-                       <label style="color:#fff;" class="new radio-inline">
-						<!--div class="new-radio"-->
-                          <input style="background:rgba(0,0,0,0.2);" type="radio" name="gender"  value="M" checked>
-						  <span></span>
-						  Male
-						<!--/div-->  
-                      </label>
-                      <label style="color:#fff;" class="radio-inline">
-						<!--div class="new-radio"-->
-                          <input type="radio" name="gender"  value="F">
-						  <span></span>
-						  Female
-						<!--/div-->  
-                      </label>
-                  </div>
-                  <div class="form-group college">
-                  </div>
-                  <div class="form-group courses">
-                  </div>
-                  <div class="form-group degree">
-                  </div>
-                  <div class="form-group year">
-                  </div>
-                  <input type="submit" class="btn btn-success" value="Register">
-              </form>
-          </div>
-      </div><!-- .section-title-block -->					
-  </div>
+                 <div style="color:#fff;" class="input-group pull-left">
+                   Gender:
+                   <label style="color:#fff;" class="new radio-inline">
+                      <!--div class="new-radio"-->
+                      <input style="background:rgba(0,0,0,0.2);" type="radio" name="gender"  value="M" checked>
+                      <span></span>
+                      Male
+                      <!--/div-->  
+                  </label>
+                  <label style="color:#fff;" class="radio-inline">
+                      <!--div class="new-radio"-->
+                      <input type="radio" name="gender"  value="F">
+                      <span></span>
+                      Female
+                      <!--/div-->  
+                  </label>
+              </div>
+              <div class="form-group college">
+              </div>
+              <div class="form-group courses">
+              </div>
+              <div class="form-group degree">
+              </div>
+              <div class="form-group year">
+              </div>
+              <input type="submit" class="btn btn-success" value="Register">
+          </form>
+      </div>
+  </div><!-- .section-title-block -->					
+</div>
 </div>
 </div><!-- .section-content -->
 <!-- .section-content -->
@@ -419,7 +423,7 @@ data-anchor="form">
 
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
 <script>
- WebFont.load({
+   WebFont.load({
     google: {
         families: ['Abril Fatface', 'Aref Ruqaa', 'Raleway:400,500,700']
     }
@@ -459,6 +463,7 @@ data-anchor="form">
                 container: container,
                 todayHighlight: true,
                 autoclose: true,
+                endDate: '31-Dec-2016'
             };
             date_input.datepicker(options);
         });
