--- a/index.html
+++ b/index.html
@@ -461,9 +461,9 @@ data-anchor="form">
               var options={
                 format: 'dd-M-yyyy',
                 container: container,
-                todayHighlight: true,
                 autoclose: true,
-                endDate: '31-Dec-2016'
+                endDate: '31-Dec-2016',
+                startDate: '01-Jan-1980'
             };
             date_input.datepicker(options);
         });
