--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body.modal-open {
         display:none;
     }
     .update{
-        font-size:5vw !important;
+        font-size:30px !important;
     }
 }
 @media screen and (min-width:799px){
@@ -523,7 +523,7 @@ data-anchor="form">
 
             // rolling content
             $(".update").typed({
-                strings: ["Some cachy content", "Dai edaadu podungadaa"],
+                strings: ["Sign up as Student Ambassador for Kurukshetra' 17!", "Revamp yourself, revitalise others."],
                 typeSpeed: 0,
                 loop: true,
                 showCursor: false,
