--- a/index.html
+++ b/index.html
@@ -182,18 +182,17 @@ data-anchor="introduction">
     <div class="container section-wrap"
     style="">
     <h1 class="section-title" data-appear-animation="fadeInDown" data-appear-animation-delay="100">Introduction</h1>
-    <p style="color:#fff; font-size:16px; margin-left:30px; text-align:justify;font-style: normal; max-height:460px;">
-      Kurukshetra embarked on its trend of pioneering ventures with the <b>S</b>tudent <b>A</b>mbassador Programme which was launched during its first edition. The K'12 Student Ambassador programme received an overwhelming response with more than thousand aspirants battling it out to don the most coveted mantle of K! And again K'13 is back with the K! Ambassador Programme, awaiting to surpass the past feats.<br/><br/>
-      <i>"Next to doing the right thing, the most important thing is to let people know you are doing the right thing."</i><br/><br/>
-      To bridge the existing gap between the industry & academia, this upcoming edition aims to provide a platform for both the students and the professionals to become K!Ambassadors and represent their educational institutions and corporates respectively. This ensures a high degree of coherence between the corporate & student fraternity & also increases our magnitude of outreach to the masses.<br/><br/>
+      <p style="color:#fff; font-size:16px; margin-left:30px; text-align:justify;font-style: normal; max-height:460px;">
+        "Next to doing the right thing, the most important thing is to let people know you are doing the right thing."<br/>
 
-      Here is a promising opportunity for the students to ameliorate their leadership, communication & management skills. Are you interested to portray your eloquence and marketing skills about the galore of events, workshops, guest lectures & exhibitions at Kurukshetra to your college peers? Are you interested to interact with the elite clique of ambassadors & involve in learning & information sharing?<br/><br/>
+        Are you are a college goer? Do you want to make an actual contribution to society?<br/>
 
-      This portal is not just for students, it is also for the professionals who are eager to unleash the latent talent in them. If you are audacious enough to spearhead K! on your corporate base, convince your colleagues to participate in the corporate events of K!, interested to know about the ongoing projects in our campus and absorb the best of the talents, you are the ideal candidate to be a <b>C</b>orporate <b>A</b>mbassador.<br/><br/>
+        Then <b>sign up for the Student Ambassador program of k!17</b>. The SA program at k! is about meeting new people, being involved in new situations and making new and positive contributions to society.<br/>
 
-      <i>"You can have brilliant ideas, but if you cannot get them across, your ideas will not get you anywhere"
-      </i>
-  </p>
+        One of the biggest goals of Kurukshetra is to positively impact society. Climate Change is one of the biggest threats facing mankind today. In the words of UN Secretary General Bank Ki-moon, “Climate change does not respect border; it does not respect who you are – rich or poor, small or big. That is why it is numbered among the ‘global challenges’, which require global solidarity.” In keeping with that, <b>Climate Change was selected as the theme of the 11th edition of Kurukshetra</b>.<br/>
+
+        <b>As a Student Ambassador for Kurukshetra, you will also work with us towards this cause as goodwill ambassadors in the fight against climate change</b>. You will join an elite team of individuals whose collective ideas will be pooled towards solving this issue – giving you the chance to not only be a part of the team but also see your ideas take shape.<br/>
+    </p>
 
 </div>
 
