--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         }  
         .new-radio.checked
         {
-         background:rgba(0,0,0,0.5) !important;
-     }
-     .new-radio
-     {
+           background:rgba(0,0,0,0.5) !important;
+       }
+       .new-radio
+       {
         background: rgba(0,0,0,0) !important;
     }
     .input-group-addon
@@ -50,9 +50,9 @@
     }
     .reicon
     {
-     color:#fff;
- }	
- p {
+       color:#fff;
+   }	
+   p {
     padding: 0.1em;
     font-size:16px;
     overflow-y:auto;
@@ -74,7 +74,7 @@ body.modal-open {
     }
 }
 @media screen and (min-width:799px){
- .update{
+   .update{
     font-size:3vw !important;
 }
 }
@@ -182,7 +182,7 @@ data-anchor="introduction">
     <div class="container section-wrap"
     style="">
     <h1 class="section-title" data-appear-animation="fadeInDown" data-appear-animation-delay="100">Introduction</h1>
-      <p style="color:#fff; font-size:16px; margin-left:30px; text-align:justify;font-style: normal; max-height:460px;">
+    <p style="color:#fff; font-size:16px; margin-left:30px; text-align:justify;font-style: normal; max-height:460px;">
         "Next to doing the right thing, the most important thing is to let people know you are doing the right thing."<br/>
 
         Are you are a college goer? Do you want to make an actual contribution to society?<br/>
@@ -222,71 +222,83 @@ data-anchor="aboutsa">
     <div class="container section-wrap"
     style="">
     <div>
-     <ul class="nav nav-tabs nav-justified" style="background-color:transparent;">
-      <li class="active" data-toggle="tab">
-       <a href="#tab0">
-           <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Why Student Ambassdor
-           </h6></a>
-       </li>
-       <li data-toggle="tab">
-           <a href="#tab1">
-               <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Role of Student Ambassdor</h6></a>
-           </li>
-           <li data-toggle="tab">
-               <a href="#tab2" >
-                   <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Benefits</h6></a>
-               </li data-toggle="tab">
-               <li>
-                   <a href="#tab3">
-                       <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Requirements</h6></a>
-                   </li>
+       <ul class="nav nav-tabs nav-justified" style="background-color:transparent;">
+          <li class="active" data-toggle="tab">
+             <a href="#tab0">
+                 <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Why Student Ambassdor
+                 </h6></a>
+             </li>
+             <li data-toggle="tab">
+                 <a href="#tab1">
+                     <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Role of Student Ambassdor</h6></a>
+                 </li>
+                 <li data-toggle="tab">
+                     <a href="#tab2" >
+                         <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Benefits</h6></a>
+                     </li data-toggle="tab">
+                     <li>
+                         <a href="#tab3">
+                             <h6 style="font-family:'Aref Ruqaa', serif; font-size:20px; font-style: normal; text-transform: none;">Requirements</h6></a>
+                         </li>
 
-               </ul>
-           </div>
-           <div style="background:transparent; border:transparent; color:#fff;"class="tab-content">
-              <div class="tab-pane fade in active" id="tab0">
-               <ul style="color:#fff;font-style:normal;font-size:20px;">
-                   <li>Enhance your professional development</li>
-                   <li>Get to work with the elite Ambassadors from top notch colleges</li>
-                   <li>Improve your leadership, marketing & communication skills</li>
-                   <li>See your creativity, innovation & ideas come to fruition</li>
-               </ul>
-           </div>
-           <div class="tab-pane fade" id='tab1'>
-               <ul style="color:#fff;font-style:normal;font-size:20px;">
-                   <li>Serve as a bridge between K! & your college</li>
-                   <li>Spread the K! word to the students & faculties in your campus</li>
-                   <li>Make your college students participate in the the events & workshops of K!</li>
-                   <li>Display the marketing materials given by the K! team in your college</li>
-               </ul>
-           </div>
-           <div class="tab-pane fade" id='tab2'>
-               <ul style="color:#fff;font-style:normal;font-size:20px;">
-                   <li>Delegate kits, T-shirts, Bags</li>
-                   <li>Free onsite registration</li>
-                   <li>One way travel allowance</li>
-                   <li>Free passes to attend Guest Lectures</li>
-                   <li>Cash prizes, free accomodation& workshop to best Ambassadors</li>
-               </ul>				
-           </div>
-           <div class="tab-pane fade" id='tab3'>
-               <ul style="color:#fff;font-style:normal;font-size:20px;">
-                   <li>College student - any degree & any year</li>
-                   <li>Good interpersonal skills</li>
-                   <li>General marketing skills</li>
-                   <li>Involvement in extra curricular activities</li>
-                   <li>Passion for learning, creativity, innovation & information sharing</li>
-               </ul>
-           </div>
-       </div>
-   </div>
-</div>
-<!-- .section-content -->
-<div class="animation text-center"
-data-appear-animation="bounceInUp"
-data-appear-animation-delay="100">
-<a href="#form"><i class="fa fa-angle-double-down" style="font-size:48px;"></i></a>
-</div>
+                     </ul>
+                 </div>
+                 <div style="background:transparent; border:transparent; color:#fff;"class="tab-content">
+                  <div class="tab-pane fade in active" id="tab0">
+                     <ul style="color:#fff;font-style:normal;font-size:20px;">
+                         <li>Actively impact the society by becoming our goodwill ambassador.</li>
+                         <li>Enhance your professional skills and develop personality.</li>
+                         <li>Get to work with the elite Ambassadors from top notch colleges.</li>
+                         <li>Improve your leadership, marketing & communication skills.</li>
+                         <li>See your creativity, innovation & ideas come to fruition.</li>
+
+                     </ul>
+                 </div>
+                 <div class="tab-pane fade" id='tab1'>
+                     <ul style="color:#fff;font-style:normal;font-size:20px;">
+                         <li>Serve as a bridge between k! & your college.</li>
+                         <li>Spread the word about k! to the students & faculties in your campus.</li>
+                         <li>Encourage your college students participate in the events & workshops of K!</li>
+                         <li>Display the marketing materials given by the k! team in your college.</li>
+                     </ul>
+                 </div>
+                 <div class="tab-pane fade" id='tab2'>
+                     <ul style="color:#fff;font-style:normal;font-size:20px;">
+                         <li>Delegate kits, T-shirts, Bags</li>
+                         <li>Free onsite registration</li>
+                         <li>Letter of Appreciation for being the part of Kurukshetra 2017.</li>
+                         <li>Certificates issued under the patronage of UNESCO and recognition of Ministry of Electronics and Information technology, Government of India.</li>
+                         <li>For every three registrations with your Referral ID, you will get an offer coupon worth Rs.100/-.</li>
+                         <li>One way travel allowance for the exceptionally performing Ambassadors.</li>
+                         <li>Free passes to attend Guest Lectures</li>
+                         <li>Free workshop passes, Cash prizes, free accommodation for the exceptionally performing Ambassadors.</li>
+                         <br/><b>Kurukshetra Student Ambassador Award</b><br>
+                         Exceptionally performing Student Ambassadors will be considered for Kurukshetra’s Student Ambassador Award. A cash prize worth 5k and complete travel reimbursement awaits the winner(s) who will be selected based on the norms specified by Team Kurukshetra and will be displayed at the end.
+                         <br/><b>Basic Requirements:</b><br/>
+                         Any Student Ambassador who facilitates the maximum no. of registrations with his/her Referral Id. (A minimum of 60 registrations is required for consideration.)
+
+
+                     </ul>				
+                 </div>
+                 <div class="tab-pane fade" id='tab3'>
+                     <ul style="color:#fff;font-style:normal;font-size:20px;">
+                         <li>College student - any degree & any year.</li>
+                         <li>Good interpersonal and communication skills. </li>
+                         <li>Passion for learning, creativity, innovation & information sharing.</li>
+
+
+
+                     </ul>
+                 </div>
+             </div>
+         </div>
+     </div>
+     <!-- .section-content -->
+     <div class="animation text-center"
+     data-appear-animation="bounceInUp"
+     data-appear-animation-delay="100">
+     <a href="#form"><i class="fa fa-angle-double-down" style="font-size:48px;"></i></a>
+ </div>
 </section>
 <!-- .section -->
 
@@ -306,32 +318,32 @@ data-anchor="form">
     <div class="particle" style="width: 100%;height: 100%;position: absolute;"></div>
     <div class="container section-wrap">
         <div>
-         <div>
-             <h1 style="color: rgb(255, 247, 204);" class="section-title text-center" data-appear-animation="fadeInDown" data-appear-animation-delay="100">STUDENT AMBASSDOR REGISTRATION</h1>						
-             <div align="center" style="max-height:800px;">
-               <form id="sa_registration_form" style="position: relative; width:50%;min-width: 300px; background: rgba(0, 0, 0, 0.2); padding-bottom:10px; padding-left:20px; padding-right:20px; padding-top:10px;" method="post">
-                <div class="input-group" style="padding-bottom:13px;">
-                 <span class="input-group-addon"><i class="reicon glyphicon glyphicon-user"></i></span>
-                 <input id="name" type="text" class="form-control" name="name" placeholder="Your name" onblur="validatename(this)">
-             </div>
-             <div class="input-group" style="padding-bottom:13px;">
-                 <span class="input-group-addon"><i class="reicon fa fa-phone" style="width:16px;"></i></span>
-                 <input id="phone" type="text" class="form-control" name="contactNumber" placeholder="Your mobile number" onblur="validatephone(this)">
-             </div>
+           <div>
+               <h1 style="color: rgb(255, 247, 204);" class="section-title text-center" data-appear-animation="fadeInDown" data-appear-animation-delay="100">STUDENT AMBASSDOR REGISTRATION</h1>						
+               <div align="center" style="max-height:800px;">
+                 <form id="sa_registration_form" style="position: relative; width:50%;min-width: 300px; background: rgba(0, 0, 0, 0.2); padding-bottom:10px; padding-left:20px; padding-right:20px; padding-top:10px;" method="post">
+                    <div class="input-group" style="padding-bottom:13px;">
+                       <span class="input-group-addon"><i class="reicon glyphicon glyphicon-user"></i></span>
+                       <input id="name" type="text" class="form-control" name="name" placeholder="Your name" onblur="validatename(this)">
+                   </div>
+                   <div class="input-group" style="padding-bottom:13px;">
+                       <span class="input-group-addon"><i class="reicon fa fa-phone" style="width:16px;"></i></span>
+                       <input id="phone" type="text" class="form-control" name="contactNumber" placeholder="Your mobile number" onblur="validatephone(this)">
+                   </div>
 
-             <div class="input-group" style="padding-bottom:13px;">
-                 <span class="input-group-addon"><i class="reicon fa fa-envelope"></i></span>
-                 <input id="email" type="text" class="form-control" name="emailId" placeholder="Your email-id" onblur="validatemail(this)">
-             </div>
+                   <div class="input-group" style="padding-bottom:13px;">
+                       <span class="input-group-addon"><i class="reicon fa fa-envelope"></i></span>
+                       <input id="email" type="text" class="form-control" name="emailId" placeholder="Your email-id" onblur="validatemail(this)">
+                   </div>
 
-             <div class="input-group" style="padding-bottom:13px;">
-                 <span class="input-group-addon"><i class="reicon glyphicon glyphicon-lock"></i></span>
-                 <input id="pass" type="password" class="form-control" name="password" placeholder="Password (min 8 characters)" onblur="validatepass(this)">
-             </div>
-             <div class="input-group">
-                 <span class="input-group-addon"><i class="reicon fa fa-calendar"></i></span>
-                 <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="text"/>
-             </div>
+                   <div class="input-group" style="padding-bottom:13px;">
+                       <span class="input-group-addon"><i class="reicon glyphicon glyphicon-lock"></i></span>
+                       <input id="pass" type="password" class="form-control" name="password" placeholder="Password (min 8 characters)" onblur="validatepass(this)">
+                   </div>
+                   <div class="input-group">
+                       <span class="input-group-addon"><i class="reicon fa fa-calendar"></i></span>
+                       <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="text"/>
+                   </div>
 				   <!--div class="input-group date" data-provide="datepicker">
 						<span class="input-group-addon"><i class="reicon fa fa-calendar"></i></span>
 						<input type="text" placeholder="MM/DD/YYY" class="form-control" data-provide="datepicker" data-date-end-date="0d">
@@ -339,9 +351,9 @@ data-anchor="form">
 							<span class="glyphicon glyphicon-th"></span>
 						</div>
 					</div-->
-                 <div style="color:#fff;" class="input-group pull-left">
-                   Gender:
-                   <label style="color:#fff;" class="new radio-inline">
+                   <div style="color:#fff;" class="input-group pull-left">
+                     Gender:
+                     <label style="color:#fff;" class="new radio-inline">
                       <!--div class="new-radio"-->
                       <input style="background:rgba(0,0,0,0.2);" type="radio" name="gender"  value="M" checked>
                       <span></span>
@@ -422,7 +434,7 @@ data-anchor="form">
 
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
 <script>
-   WebFont.load({
+ WebFont.load({
     google: {
         families: ['Abril Fatface', 'Aref Ruqaa', 'Raleway:400,500,700']
     }
