--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@ body.modal-open {
     position:fixed !important;
     width: 100%;
 }
+.select2-container .select2-selection--single
+{
+height:30px !important;
+}
+.form-control
+{
+height:30px !important;
+}
 @media screen and (max-width: 800px) {
     .unescodiv {
         display:none;
